k8srestrictnamespaces.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Restricts resources from using namespaces listed under the restrictedNamespaces
      parameter. Resources can bypass this restriction using a labelSelector. Introduced
      in ACM v1.5.2.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"templates.gatekeeper.sh/v1beta1","kind":"ConstraintTemplate","metadata":{"annotations":{"description":"Restricts resources from using namespaces listed under the restrictedNamespaces parameter. Resources can bypass this restriction using a labelSelector. Introduced in ACM v1.5.2."},"labels":{"configmanagement.gke.io/configmanagement":"config-management","k8s-app":"kubernetes-config-management","policycontroller.configmanagement.gke.io":"true"},"name":"k8srestrictnamespaces", [...]
  creationTimestamp: "2021-09-01T19:15:23Z"
  generation: 1
  labels:
    configmanagement.gke.io/configmanagement: config-management
    k8s-app: kubernetes-config-management
    policycontroller.configmanagement.gke.io: "true"
  managedFields:
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:configmanagement.gke.io/configmanagement: {}
          f:k8s-app: {}
          f:policycontroller.configmanagement.gke.io: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e1113c3f-44c2-4a94-ad86-55422839f36f"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        .: {}
        f:crd:
          .: {}
          f:spec:
            .: {}
            f:names:
              .: {}
              f:kind: {}
            f:validation:
              .: {}
              f:legacySchema: {}
              f:openAPIV3Schema:
                .: {}
                f:properties: {}
        f:targets: {}
    manager: Go-http-client
    operation: Update
    time: "2021-09-01T19:15:23Z"
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:byPod: {}
        f:created: {}
    manager: gatekeeper
    operation: Update
    time: "2021-09-01T19:17:18Z"
  name: k8srestrictnamespaces
  ownerReferences:
  - apiVersion: configmanagement.gke.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: ConfigManagement
    name: config-management
    uid: e1113c3f-44c2-4a94-ad86-55422839f36f
  resourceVersion: "5283481"
  uid: 4caf8e72-4b82-4a5a-8615-be47f32ccf36
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictNamespaces
      validation:
        legacySchema: true
        openAPIV3Schema:
          properties:
            restrictedNamespaces:
              items:
                type: string
              type: array
  targets:
  - rego: |
      package k8srestrictnamespaces

      violation[{"msg": msg}] {
        restricted_ns := input.parameters.restrictedNamespaces[_]
        input.review.object.metadata.namespace == restricted_ns
        msg := sprintf("<%v> namespace is restricted", [restricted_ns])
      }
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-79966db76-g9t4n
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: 4caf8e72-4b82-4a5a-8615-be47f32ccf36
  - id: gatekeeper-controller-manager-78bb8f574f-qthrj
    observedGeneration: 1
    operations:
    - webhook
    templateUID: 4caf8e72-4b82-4a5a-8615-be47f32ccf36
  - id: gatekeeper-mutation-7696499fc9-4xr86
    observedGeneration: 1
    operations:
    - mutation-status
    - webhook
    templateUID: 4caf8e72-4b82-4a5a-8615-be47f32ccf36
  created: true
